tests/query_errors/aggregate_aggregate_fail/error.txt
Error: 
    7 |             1 * []
      |             ^^^^^^ The binary operation `*` is not defined for the type `integer` and `array`